--- a/sections/ListOfAbb.tex
+++ b/sections/ListOfAbb.tex
@@ -1,5 +1,6 @@
 \begin{itemize}
 \item{ATLAS: A Torodial LHC Apparatus}
+\item{aQGC: anamolous Quartic Gauge Couplings} 
 \item{BSM: Beyond the Standard Model}
 \item{C: Charge conjugation}
 \item{CERN: Conseil Europ\'{e}en pour la Recherche Nucl\'{e}aire}
@@ -46,6 +47,7 @@
 \item{SF: Scale factors}
 \item{SF-OC: Same-flavor, Opposite-charged} 
 \item{SM: Standard Model}
+\item{SMEFT: Standard Model Effective Field Theory} 
 \item{SR: Signal Region}
 \item{SPS: Super Proton Synchroton} 
 \item{T: Time-reversal}
