--- a/biblio.bib
+++ b/biblio.bib
@@ -1161,3 +1161,105 @@ author = {{A. Salam and J.C. Ward}}
       title = {{ATLAS b-jet identification performance and efficiency measurement with $t\bar{t}$ events in pp collisions at $sqrt{s}=13$ TeV}},
 	journal = {The European Physical Journal C}
 }
+
+@article{EFT_Eboli,
+  title = {{Unitarity constraints on anomalous quartic couplings}},
+  author = {{Almeida, Eduardo da Silva and \'Eboli, O. J. P. and Gonzalez--Garcia, M. C.}},
+  journal = {Phys. Rev. D},
+  volume = {101},
+  issue = {11},
+  pages = {113003},
+  numpages = {12},
+  year = {2020},
+  month = {Jun},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.101.113003},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.101.113003}
+}
+@article{EFT_Dimension8VBS,
+  title = { $pp \rightarrow jj e^{\pm} \mu^{\pm} \nu \nu $ and $pp \rightarrow jj e^{\pm} \mu^{\mp} \nu \nu $ at $\mathcal{O}(\alpha_{em}^{6})$ and $\mathcal{O}(\alpha_{em}^{4}) \mathcal{O}(\alpha_{s}^{2})$ for the study of the quartic electroweak gauge boson vertex at CERN LHC},
+  author = {{\'Eboli, O. J. P. and Gonzalez-Garcia, M. C. and Mizukoshi, J. K.}},
+  journal = {Phys. Rev. D},
+  volume = {74},
+  issue = {7},
+  pages = {073005},
+  numpages = {14},
+  year = {2006},
+  month = {Oct},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.74.073005},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.74.073005}
+}
+
+@article{SMEFT,
+	doi = {10.1007/jhep12(2017)070},
+	url = {https://doi.org/10.1007%2Fjhep12%282017%29070},
+	year = 2017,
+	month = {dec},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {2017},
+	number = {12},
+	author = {Ilaria Brivio and Yun Jiang and Michael Trott},
+	title = {The {SMEFTsim} package, theory and tools},
+	journal = {Journal of High Energy Physics}
+}
+
+@article{Dim6_VBS,
+	doi = {10.1140/epjc/s10052-019-6893-2},
+	url = {https://doi.org/10.1140%2Fepjc%2Fs10052-019-6893-2},
+	year = 2019,
+	month = {may},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {79},
+	number = {5},
+	author = {Raquel Gomez-Ambrosio},
+	title = {{Studies of dimension-six EFT effects in vector boson scattering}},
+	journal = {The European Physical Journal C}
+}
+@article{SMEFT_Dim6_VBS,
+	doi = {10.1140/epjc/s10052-021-09347-7},
+	url = {https://doi.org/10.1140%2Fepjc%2Fs10052-021-09347-7},
+	year = 2021,
+	month = {jun},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {81},
+	number = {6},
+	author = {{Jacob J. Ethier and Raquel Gomez-Ambrosio and Giacomo Magni and Juan Rojo}},
+	title = {{SMEFT analysis of vector boson scattering and diboson data from the LHC Run II}},
+	journal = {The European Physical Journal C}
+}
+@article{Dim7_EFT,
+	doi = {10.1103/physrevd.90.125023},
+	url = {https://doi.org/10.1103%2Fphysrevd.90.125023},
+	year = 2014,
+	month = {dec},
+	publisher = {{American Physical Society APS}},
+	volume = {90},
+	number = {12},
+	author = {Landon Lehman},
+	title = {{Extending the standard model effective field theory with the complete set of dimension-7 operators}},
+	journal = {Physical Review D}
+}
+@article{GlobalEFT_Dim6,
+	doi = {10.1007/jhep06(2018)146},
+	url = {https://doi.org/10.1007%2Fjhep06%282018%29146},
+	year = 2018,
+	month = {jun},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {2018},
+	number = {6},
+	author = {John Ellis and Christopher W. Murphy and Ver{\'{o}}nica Sanz and Tevong You},
+	title = {{Updated global SMEFT fit to Higgs, diboson and electroweak data}},
+	journal = {Journal of High Energy Physics}
+}
+@article{Inclusive_FourLepton,
+      doi={10.1007/JHEP07(2021)005},
+      url={https://doi.org/10.1007/JHEP07(2021)005},
+      author={{ATLAS Collaboration}},
+      year={2021},
+      month={jul},
+      title={{Measurements of differential cross-sections in four-lepton events in 13 TeV proton-proton collisions with the ATLAS detector}},
+      journal={Journal of High Energy Physics},
+      volume          = {2021},
+      number ={7}
+}
